--- a/app/src/main/res/layout/profile_item_data.xml
+++ b/app/src/main/res/layout/profile_item_data.xml
@@ -26,6 +26,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:paddingRight="16dp"
+                android:gravity="left"
                 android:textColor="#191919"/>
         <TextView
                 android:id="@+id/data_type"
