--- a/app/src/main/res/layout/fake_toolbar_wth_avatar_and_title.xml
+++ b/app/src/main/res/layout/fake_toolbar_wth_avatar_and_title.xml
@@ -18,7 +18,7 @@
     <LinearLayout
             android:id="@+id/title_wrapper"
             android:layout_width="match_parent"
-            android:layout_height="?android:attr/actionBarSize"
+            android:layout_height="56dp"
             android:gravity="center_vertical"
             android:layout_gravity="bottom"
             android:orientation="vertical"
