--- a/app/src/main/res/layout/chat_item_message_forward.xml
+++ b/app/src/main/res/layout/chat_item_message_forward.xml
@@ -38,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@id/forward_nick"
             android:layout_below="@id/forward_nick"
+            android:textColor="#333333"
             android:paddingRight="8dp"
             />
 </ru.korniltsev.telegram.chat.adapter.view.ForwardedMessageView>
