--- a/app/src/main/res/layout/chat_item_message_forward2.xml
+++ b/app/src/main/res/layout/chat_item_message_forward2.xml
@@ -42,6 +42,7 @@
             android:layout_alignLeft="@id/forward_nick"
             android:layout_below="@id/forward_nick"
             android:paddingRight="8dp"
+            android:textColor="#333333"
             />
 
 </ru.korniltsev.telegram.chat.adapter.view.ForwardedMessageView>
