--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="controlHighlight">#ff75c1f7</color>
     <color name="debug">#b1000000</color>
     <color name="debug2">#ff4576a2</color>
+    <color name="debug3">#0e4a66</color>
 
 
 
